fix links for vercel

--- a/how-to-order.html
+++ b/how-to-order.html
@@ -745,7 +745,7 @@
 
         <!-- Navigation -->
         <div class="nav-links">
-            <a href="price-calculator2.html" class="nav-link">💰 <span data-translate="nav_calculator">Price Calculator</span></a>
+            <a href="index.html" class="nav-link">💰 <span data-translate="nav_calculator">Price Calculator</span></a>
         </div>
 
         <!-- Language Switcher -->
@@ -889,7 +889,7 @@
                     <span>📸</span>
                     <span data-translate="cta_instagram">Message on Instagram</span>
                 </a>
-                <a href="price-calculator2.html" class="cta-btn secondary">
+                <a href="index.html" class="cta-btn secondary">
                     <span>💰</span>
                     <span data-translate="cta_calculator">Calculate Prices</span>
                 </a>
